fix lyric is too close the bottom to be seen

--- a/src/Lyric/LyricDetail/index.less
+++ b/src/Lyric/LyricDetail/index.less
@@ -92,7 +92,7 @@
       }
     }
     .current-lyric-standby {
-      color: #b3b3b3;
+      color: #acacac;
     }
     .current-lyric {
       color: #e2e2e2;
@@ -123,8 +123,6 @@
   .cool-lyric-detail {
     height: 190px;
     .cool-lyric-base-line-wrapper {
-      top: 50%;
-      margin-left: -50%;
       .cool-lyric-base-line {
       }
     }
@@ -135,7 +133,7 @@
     .cool-lyric-content {
       .lyric-item {
         &:first-child {
-          margin-top: 60px;
+          margin-top: 45px;
         }
       }
     }
@@ -144,7 +142,7 @@
     .cool-lyric-content-full-screen {
       .lyric-item {
         &:first-child {
-          margin-top: 190px;
+          margin-top: 210px;
         }
       }
     }
@@ -167,7 +165,7 @@
       height: 200px;
       .lyric-item {
         &:first-child {
-          margin-top: 60px;
+          margin-top: 50px;
         }
       }
     }
@@ -195,7 +193,7 @@
       font-size: 14px;
 
       &:first-child {
-        margin-top: 60px;
+        margin-top: 40px;
       }
     }
 
@@ -228,7 +226,7 @@
       height: 200px;
       .lyric-item {
         &:first-child {
-          margin-top: 92px;
+          margin-top: 40px;
         }
       }
     }
@@ -237,7 +235,7 @@
     .cool-lyric-content-full-screen {
       .lyric-item {
         &:first-child {
-          margin-top: 167px;
+          margin-top: 190px;
         }
       }
     }
@@ -264,7 +262,7 @@
         padding: @padding-base 0;
         font-size: 14px;
         &:first-child {
-          margin-top: 50px;
+          margin-top: 30px;
         }
       }
     }
@@ -273,7 +271,7 @@
     .cool-lyric-content-full-screen {
       .lyric-item {
         &:first-child {
-          margin-top: 158px;
+          margin-top: 180px;
         }
       }
     }
@@ -300,7 +298,7 @@
         padding: @padding-base 0;
         font-size: 14px;
         &:first-child {
-          margin-top: 50px;
+          margin-top: 30px;
         }
       }
     }
@@ -309,7 +307,7 @@
     .cool-lyric-content-full-screen {
       .lyric-item {
         &:first-child {
-          margin-top: 130px;
+          margin-top: 150px;
         }
       }
     }
